--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
-.env
+*.env
 .venv
 env/
 venv/
@@ -103,3 +103,6 @@ venv.bak/
 # mypy
 .mypy_cache/
 .idea/
+
+# DB stuff
+postgres-data
