--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
   db:
     env_file:
@@ -14,57 +14,7 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
 
-# Superset
-  redis:
-    image: redis:3.2
-    restart: unless-stopped
-    ports:
-      - "127.0.0.1:6379:6379"
-    volumes:
-      - redis:/data
-
-  postgres:
-    image: postgres:10
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: superset
-      POSTGRES_PASSWORD: superset
-      POSTGRES_USER: superset
-    ports:
-      - "127.0.0.1:5432:5432"
-    volumes:
-      - postgres:/var/lib/postgresql/data
-
-  superset:
-    build:
-      context: ../incubator-superset/
-      dockerfile: contrib/docker/Dockerfile
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: superset
-      POSTGRES_USER: superset
-      POSTGRES_PASSWORD: superset
-      POSTGRES_HOST: postgres
-      POSTGRES_PORT: 5432
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      # If using production, comment development volume below
-      #SUPERSET_ENV: production
-      SUPERSET_ENV: development
-    user: root:root
-    ports:
-      - 8088:8088
-    depends_on:
-      - postgres
-      - redis
-    volumes:
-      # this is needed to communicate with the postgres and redis services
-      - /Users/egbert/projects/incubator-superset/contrib/docker/superset_config.py:/home/superset/superset/superset_config.py
-      # this is needed for development, remove with SUPERSET_ENV=production
-      - /Users/egbert/projects/incubator-superset/superset:/home/superset/superset
-
-volumes:
-  postgres:
-    external: false
-  redis:
-    external: false
+networks:
+  default:
+    external:
+      name: incubator-superset_default
